# gucpp

./: CMakeLists.txt  README.md  contributors.txt
cmake/Modules/cmakesupport/: cms.cmake  contributors.txt
cmake/Modules/cmakesupport/scripts/: cmsautoconfiguration.cmake  cmsconfigureproject.cmake  cmscrossplatform.cmake  cmsprint.cmake
cmake/Modules/cmakesupport/templates/: file.gitignore
modules/: CMakeLists.txt
modules/callbacks/: CMakeLists.txt
modules/callbacks/include/: callbacks.h  callbacksMessages.h
modules/callbacks/src/: callbacks.cpp
modules/common/in/: GUCPP_config.h.in
modules/common/include/: buildTime.h  loggerColorTime.h  logger_basic.h
modules/communication/: CMakeLists.txt
modules/communication/include/: communication.h
modules/communication/src/: communication.cpp
modules/facade/: CMakeLists.txt
modules/facade/include/: core.h  facade.h  fooClass.h  varClass.h
modules/facade/src/: core.cpp  fooClass.cpp  varClass.cpp
modules/fileoperations/: CMakeLists.txt
modules/fileoperations/include/: dataManagement.h  exitManagement.h  fileManager.h  overflow.h  winindent.h
modules/fileoperations/src/: dataManagement.cpp  fileManager.cpp  overflow.cpp
modules/geometry2d/: CMakeLists.txt
modules/geometry2d/include/: math2D.h  point2D.h  shape2D.h  square2D.h
modules/geometry2d/src/: math2D.cpp  shape2D.cpp  square2D.cpp
modules/parsers/: CMakeLists.txt
modules/parsers/include/: base64.h
modules/parsers/src/: base64.cpp
modules/patterns/include/: singleton.h
modules/template/include/: template.h
modules/template/src/: template.cpp
samples/: CMakeLists.txt
samples/common/: CMakeLists.txt
samples/common/src/: main.cpp
samples/communication/: CMakeLists.txt
samples/communication/src/: main.cpp
samples/core/: CMakeLists.txt
samples/core/src/: main.cpp
samples/facade/: CMakeLists.txt
samples/facade/src/: main.cpp
samples/geometry2d/: CMakeLists.txt
samples/geometry2d/math2d/: CMakeLists.txt
samples/geometry2d/math2d/src/: main.cpp
samples/geometry2d/shapes2d/: CMakeLists.txt
samples/geometry2d/shapes2d/src/: main.cpp
samples/std/: CMakeLists.txt
samples/std/overflow/: CMakeLists.txt
samples/std/overflow/src/: main.cpp
samples/std/regex/: CMakeLists.txt
samples/std/regex/src/: main.cpp
samples/template/: CMakeLists.txt
samples/template/src/: main.cpp
test/: TODO.txt
